Fix T78513: Modifier apply shortcut not displayed

We can't specify the "apply_as" enum value, even though it's the default.